--- a/test/fixtures/schools.yml
+++ b/test/fixtures/schools.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  number: 1
-  letter: MyString
-  students_count: 1
+  name: MyString
+  address: MyString
 
 two:
-  number: 1
-  letter: MyString
-  students_count: 1
+  name: MyString
+  address: MyString
