--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM ruby:3.0.0-slim AS build-env
+FROM ruby:3.1.2-slim AS build-env
 
 ENV RAILS_ENV=development
 
@@ -15,11 +15,13 @@ COPY Gemfile Gemfile.lock /app/
 RUN bundler_version=$(cat Gemfile.lock | grep -A 1 "BUNDLED WITH" | sed -n '2p' | tr -d [:blank:]) \
     && gem install bundler -v $bundler_version --no-document
 
+RUN bundle config set force_ruby_platform true
+
 RUN bundle install --jobs `getconf _NPROCESSORS_ONLN` --retry=2 --no-cache
 
 COPY . /app
 
-FROM ruby:3.0.0-slim
+FROM ruby:3.1.2-slim
 
 ENV RAILS_ENV=development
 
