--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,10 @@ default: &default
 development:
   <<: *default
   database: school_api_development
+  host: <%= ENV.fetch('DB_HOST', 'localhost') %>
+  database: <%= ENV['DB_NAME'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
