--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
-    command: bash -c "rm tmp/pids/server.pid; bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rails db:migrate && rm tmp/pids/server.pid; bundle exec rails s -p 3000 -b '0.0.0.0'"
     environment:
       DB_HOST: db
       DB_NAME: school_api_development
