--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     command: "postgres -c 'max_connections=500'"
     environment:
       POSTGRES_DB: school_api_development
-      POSTGRES_USER: my_user
-      POSTGRES_PASSWORD: my_password
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
   my_service: &my_service
@@ -21,9 +21,6 @@ services:
     command: bash -c "rails db:migrate && rm tmp/pids/server.pid; bundle exec rails s -p 3000 -b '0.0.0.0'"
     environment:
       DB_HOST: db
-      DB_NAME: school_api_development
-      DB_USERNAME: my_user
-      DB_PASSWORD: my_password
     stdin_open: true
     tty: true
     volumes:
